# pi

./: .btw-plan-v2.md  .btw-plan.md  .gitignore  AGENTS.md  LICENSE  README.md  settings.json
extensions/: btw.ts  pi-go.ts  tsconfig.json  vendor-manifest.json
extensions/pi-brave-search/: AGENTS.md  README.md  package.json
extensions/pi-calendar/: AGENTS.md  README.md  package.json
extensions/pi-channels/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json
extensions/pi-cron/: AGENTS.md  README.md  package.json
extensions/pi-focus/: README.md  index.ts
extensions/pi-github/: AGENTS.md  CHANGELOG.md  README.md  package.json
extensions/pi-heartbeat/: AGENTS.md  README.md  package.json
extensions/pi-honcho-memory/: README.md  client.ts  commands.ts  config.ts  git.ts  index.ts  memory.ts  package.json  session-key.ts  tools.ts
extensions/pi-jobs/: .gitignore  AGENTS.md  README.md  package.json
extensions/pi-kysely/: AGENTS.md  README.md  package.json  tsconfig.json
extensions/pi-lens/: .gitignore  AGENTS.md  CHANGELOG.md  INLINE-CONTRACT.txt  README.md  default-architect.yaml  index.ts  package.json  tsconfig.json
extensions/pi-lens/rust/: Cargo.toml  test_integration.mjs
extensions/pi-lens/rust/src/: cache.rs  index.rs  lib.rs  main.rs  scan.rs  similarity.rs
extensions/pi-logger/: AGENTS.md  README.md  package.json  tsconfig.json
extensions/pi-memory/: AGENTS.md  README.md  package.json
extensions/pi-model-router/: AGENTS.md  CHANGELOG.md  README.md  package.json  tsconfig.json
extensions/pi-myfinance/: .gitignore  (+6 more)
(+852 files in other folders)
