[package]
name = "pi-lens-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "pi_lens_core"
path = "src/lib.rs"

[[bin]]
name = "pi-lens-core"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
rayon = "1.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ndarray = "0.15"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
walkdir = "2.5"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"

# Relaxed lints for development - can be tightened later
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
